<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
            android:id="@+id/my_collect_title"
            style="@style/headIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="0.0dip"
            android:text="@string/my_collect" />

        <TextView
            android:id="@+id/my_collect_count"
            style="@style/headIconSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/my_collect_title"
            android:paddingBottom="0.0dip" />

        <TextView
            android:id="@+id/show_all_mycollect"
            style="@style/myXiamiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="show_all_mycollect"
            android:drawableLeft="@drawable/icon_all"
            android:paddingBottom="0.0dip"
            android:text="@string/look_all" />

        <TextView
            android:id="@+id/create_collect"
            style="@style/myXiamiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="6.0dip"
            android:layout_toLeftOf="@id/show_all_mycollect"
            android:drawableLeft="@drawable/icon_add_orange"
            android:paddingBottom="0.0dip"
            android:text="@string/create" />
    </RelativeLayout>

    <TextView
        android:id="@+id/create_collect_hint"
        style="@style/listItemSubtitle"
        android:layout_width="fill_parent"
        android:layout_height="75.0dip"
        android:gravity="center"
        android:text="@string/create_collect_hint"
        android:visibility="gone" />

    <com.mamating.ui.GridViewNoScroll
        android:id="@+id/favorite_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="12.0dip"
        android:isScrollContainer="false"
        android:numColumns="3"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:scrollbars="none"
        android:verticalSpacing="7.0dip" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
            android:id="@+id/my_favorite_title"
            style="@style/headIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_favorite" />

        <TextView
            android:id="@+id/my_favorite_count"
            style="@style/headIconSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/my_favorite_title" />

        <TextView
            android:id="@+id/show_all_favorite"
            style="@style/myXiamiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/icon_all"
            android:text="@string/look_all" />
    </RelativeLayout>

    <com.mamating.ui.GridViewNoScroll
        android:id="@+id/has_study_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="12.0dip"
        android:isScrollContainer="false"
        android:numColumns="3"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:scrollbars="none"
        android:verticalSpacing="7.0dip" />

</LinearLayout>